styled button and image

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -12,3 +12,43 @@ h2,
 h3 {
     text-align: center;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
+}
+
+button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 150px;
+    height: 50px;
+    background-color: teal;
+    color: aliceblue;
+    border: 1px solid teal;
+    border-radius: 10px;
+    box-shadow: 3px 3px 5px gray;
+    cursor: pointer;
+    font-family: fantasy, serif;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+button:hover {
+    background-color: aliceblue;
+    color: teal;
+}
+
+button:active {
+    background-color: lightcyan;
+    box-shadow: none;
+}
+
+img {
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 3px 3px 5px gray;
+}
